# isac

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
artifacts/algorithmic/: dashboard_metadata.json  dashboard_selector_summary.csv  dashboard_trace_table.csv  robustness_metadata.json  robustness_sweep.csv
artifacts/dynamic/: dashboard_metadata.json  dashboard_selector_summary.csv  seed_episode_sweep.csv
artifacts/noise_sweep/: dashboard_curves.csv
dashboard/: algorithmic_app.py  app.py  dynamic_app.py
docs/: benchmark_strategy.md  roadmap.md
docs/report/: README.md  technical_report.tex  temporal_soft_cluster_isac_paper.tex
examples/: run_random_policy.py
scripts/: build_report.sh  build_temporal_soft_cluster_paper.sh  run_algorithmic_dashboard.sh  run_algorithmic_dashboard_data.py  run_algorithmic_robustness_sweep.py  run_dashboard.sh  run_dynamic_dashboard.sh  run_dynamic_dashboard_data.py  run_dynamic_seed_episode_sweep.py  run_noise_sweep.py
src/isac/: __init__.py  registry.py
src/isac/analysis/: __init__.py  portfolio_dashboard.py
src/isac/baselines/: __init__.py  random_policy.py
src/isac/core/: __init__.py  algorithmic_portfolio.py  dynamic_portfolio.py  normalization.py  portfolio.py  synthetic.py
tests/: test_algorithmic_selectors.py  test_deep_clustering_selector.py  test_env.py  test_mlp_selector.py  test_noise_sweep.py  test_portfolio_benchmark.py  test_portfolio_dashboard.py  test_selectors.py  test_smac_portfolio.py  test_temporal_moe_selector.py  test_temporal_soft_cluster_selector.py
(+18 files in other folders)
