[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "isac-sim"
version = "0.1.0"
description = "ISAC-inspired simulation environments and research tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Christian Speck" }
]
dependencies = [
  "numpy>=1.26",
  "torch>=2.11",
]

[project.optional-dependencies]
dashboard = [
  "pandas>=2.2",
  "plotly>=6.0",
  "streamlit>=1.44",
]
smac = [
  "smac>=2.3",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/isac"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
